Version 1.4.1
Add optimization on all pages
Improve tooltip info on speciality

Fix rate value for reincarnation eval 1
Fix data (Talent, EquipSet, Speciality, CombiTalent)